--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "description": "Unified API Gateway for AI Services",
+  "author": "MyDailyCloud",
+  "main": "electron/main.js",
   "scripts": {
     "dev": "vite",
+    "electron:dev": "concurrently -k \"npm run dev\" \"npm run electron:start\"",
+    "electron:start": "wait-on tcp:8080 && tsc -p electron/tsconfig.json && electron .",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
@@ -45,8 +50,6 @@
     "cmdk": "^1.1.1",
     "concurrently": "^9.2.1",
     "date-fns": "^3.6.0",
-    "electron": "^39.2.7",
-    "electron-builder": "^26.0.12",
     "electron-store": "^11.0.2",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
@@ -83,6 +86,8 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
-    "vite": "^5.4.19"
+    "vite": "^5.4.19",
+    "electron": "^39.2.7",
+    "electron-builder": "^26.0.12"
   }
 }
