Integrate Electron app with AI backend and IPC
Adds Electron main and preload scripts, updates build and tsconfig for Electron output, and integrates AI backend initialization with secure storage. Improves IPC event handling, updates provider registration, and enhances rate limit presets for multiple AI providers. Also fixes detection of Electron environment in the UI client and makes minor build and style adjustments.

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -8,13 +8,14 @@ directories:
 
 files:
   - dist/**/*
-  - electron/**/*.js
+  - dist-electron/**/*
+  - electron/package.json
   - "!**/*.ts"
   - "!**/node_modules/**/*"
   - node_modules/**/*
 
 extraMetadata:
-  main: electron/main.js
+  main: dist-electron/electron/main.js
 
 asar: true
 compression: maximum
