--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Install Electron dependencies for headless test
         run: |
           sudo apt-get update
-          sudo apt-get install -y xvfb libnss3 libatk1.0-0 libatk-bridge2.0-0 libcups2 libdrm2 libxkbcommon0 libxcomposite1 libxdamage1 libxrandr2 libgbm1 libasound2
+          sudo apt-get install -y xvfb libnss3 libatk1.0-0 libatk-bridge2.0-0 libcups2 libdrm2 libxkbcommon0 libxcomposite1 libxdamage1 libxrandr2 libgbm1 libasound2t64
 
       - name: Health check Electron backend (后端健康检查)
         run: |
