--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -60,6 +60,9 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y xvfb libnss3 libatk1.0-0 libatk-bridge2.0-0 libcups2 libdrm2 libxkbcommon0 libxcomposite1 libxdamage1 libxrandr2 libgbm1 libasound2t64
 
+      - name: Rebuild native modules for Electron
+        run: npx electron-rebuild
+
       - name: Health check Electron backend (后端健康检查)
         run: |
           # Run Electron in health check mode
