Configure Electron Builder to use generated icons

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -31,7 +31,7 @@ mac:
         - x64
         - arm64
   category: public.app-category.developer-tools
-  # icon: build/icon.icns  # Uncomment after generating icons
+  icon: build/icon.icns
   hardenedRuntime: true
   gatekeeperAssess: false
   entitlements: build/entitlements.mac.plist
@@ -59,7 +59,7 @@ win:
     - target: portable
       arch:
         - x64
-  # icon: build/icon.ico  # Uncomment after generating icons
+  icon: build/icon.ico
   artifactName: "${productName}-${version}-${os}-${arch}.${ext}"
 
 nsis:
@@ -67,9 +67,9 @@ nsis:
   perMachine: false
   allowToChangeInstallationDirectory: true
   deleteAppDataOnUninstall: false
-  # installerIcon: build/icon.ico  # Uncomment after generating icons
-  # uninstallerIcon: build/icon.ico
-  # installerHeaderIcon: build/icon.ico
+  installerIcon: build/icon.ico
+  uninstallerIcon: build/icon.ico
+  installerHeaderIcon: build/icon.ico
   createDesktopShortcut: true
   createStartMenuShortcut: true
   shortcutName: AI SDK Gateway
@@ -87,7 +87,7 @@ linux:
     - target: rpm
       arch:
         - x64
-  # icon: build/icons  # Uncomment after generating icons
+  icon: build/icons
   category: Development
   maintainer: AI SDK Team
   vendor: AI SDK
