fix: 修复 macOS 构建配置
- 禁用 hardenedRuntime 和 entitlements 以避免代码签名问题
- 修正 Linux icon 配置为 icon.png 文件而非目录
- 简化 macOS 构建流程，适用于 CI 环境

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -32,10 +32,8 @@ mac:
         - arm64
   category: public.app-category.developer-tools
   icon: build/icon.icns
-  hardenedRuntime: true
+  hardenedRuntime: false
   gatekeeperAssess: false
-  entitlements: build/entitlements.mac.plist
-  entitlementsInherit: build/entitlements.mac.plist
   notarize: false
 
 dmg:
@@ -87,7 +85,7 @@ linux:
     - target: rpm
       arch:
         - x64
-  icon: build/icons
+  icon: build/icon.png
   category: Development
   maintainer: AI SDK Team
   vendor: AI SDK
