Improve Electron build process and add app icon
Adds a new SVG icon for the app and updates the build workflow to create a package.json in dist-electron for CommonJS compatibility. Adjusts macOS signing logic to handle missing certificates gracefully and updates electron-builder.yml to explicitly set identity and entitlements fields to null, disabling code signing and hardened runtime when certificates are not present.

--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -118,12 +118,18 @@ jobs:
       - name: Compile Electron TypeScript
         run: npx tsc -p electron/tsconfig.json
 
+      - name: Create dist-electron package.json
+        run: echo '{"type":"commonjs"}' > dist-electron/package.json
+
       - name: Build Electron app for macOS
         run: npx electron-builder --mac
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CSC_LINK: ${{ secrets.MAC_CERTS }}
-          CSC_KEY_PASSWORD: ${{ secrets.MAC_CERTS_PASSWORD }}
+          # 只有在证书存在时才设置签名环境变量
+          CSC_LINK: ${{ secrets.MAC_CERTS || '' }}
+          CSC_KEY_PASSWORD: ${{ secrets.MAC_CERTS_PASSWORD || '' }}
+          # 如果没有证书，跳过签名
+          CSC_IDENTITY_AUTO_DISCOVERY: ${{ secrets.MAC_CERTS && 'true' || 'false' }}
 
       - name: Upload macOS artifacts
         uses: actions/upload-artifact@v4
@@ -157,6 +163,9 @@ jobs:
 
       - name: Compile Electron TypeScript
         run: npx tsc -p electron/tsconfig.json
+
+      - name: Create dist-electron package.json
+        run: echo '{"type":"commonjs"}' > dist-electron/package.json
 
       - name: Build Electron app for Windows
         run: npx electron-builder --win
@@ -194,6 +203,9 @@ jobs:
 
       - name: Compile Electron TypeScript
         run: npx tsc -p electron/tsconfig.json
+
+      - name: Create dist-electron package.json
+        run: echo '{"type":"commonjs"}' > dist-electron/package.json
 
       - name: Build Electron app for Linux
         run: npx electron-builder --linux
