fix: 修复 electron-builder 版本号和代码签名问题
- 添加自动从 Git tag 提取版本号到 package.json 的功能
- 为 macOS/Windows/Linux 构建添加版本更新步骤
- 配置 macOS 跳过代码签名（identity: null）
- 添加 dist-electron/package.json 创建步骤
- 更新 package.json 版本号为 0.1.1

--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -112,6 +112,17 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Update version from tag
+        run: |
+          if [[ "${{ github.ref }}" == refs/tags/v* ]]; then
+            VERSION=${GITHUB_REF#refs/tags/v}
+            echo "Updating version to $VERSION"
+            npm version $VERSION --no-git-tag-version --allow-same-version
+          else
+            echo "Not a tag push, skipping version update"
+          fi
+        shell: bash
+
       - name: Build Vite app
         run: npm run build
 
@@ -158,6 +169,17 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Update version from tag
+        run: |
+          if ("${{ github.ref }}" -like "refs/tags/v*") {
+            $VERSION = "${{ github.ref }}" -replace '^refs/tags/v', ''
+            Write-Host "Updating version to $VERSION"
+            npm version $VERSION --no-git-tag-version --allow-same-version
+          } else {
+            Write-Host "Not a tag push, skipping version update"
+          }
+        shell: pwsh
+
       - name: Build Vite app
         run: npm run build
 
@@ -197,6 +219,17 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+
+      - name: Update version from tag
+        run: |
+          if [[ "${{ github.ref }}" == refs/tags/v* ]]; then
+            VERSION=${GITHUB_REF#refs/tags/v}
+            echo "Updating version to $VERSION"
+            npm version $VERSION --no-git-tag-version --allow-same-version
+          else
+            echo "Not a tag push, skipping version update"
+          fi
+        shell: bash
 
       - name: Build Vite app
         run: npm run build
