fix: 修复 CI 中原生模块版本冲突问题
- 将 E2E 测试移到 electron-rebuild 之前执行
- 避免 better-sqlite3 模块在 Node.js 和 Electron 环境之间的版本冲突
- 确保 E2E 测试使用 Node.js 编译的原生模块
- 健康检查使用 Electron 编译的原生模块

--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -55,6 +55,14 @@ jobs:
       - name: Create dist-electron package.json
         run: echo '{"type":"commonjs"}' > dist-electron/package.json
 
+      - name: AI SDK E2E Test (在 Node.js 环境中运行)
+        env:
+          CEREBRAS_API_KEY_1: ${{ secrets.CEREBRAS_API_KEY_1 }}
+          CEREBRAS_API_KEY_2: ${{ secrets.CEREBRAS_API_KEY_2 }}
+          CEREBRAS_API_KEY_3: ${{ secrets.CEREBRAS_API_KEY_3 }}
+        run: npx tsx scripts/tests/runner.ts --e2e
+        timeout-minutes: 3
+
       - name: Install Electron dependencies for headless test
         run: |
           sudo apt-get update
@@ -86,14 +94,6 @@ jobs:
             exit 1
           fi
         timeout-minutes: 2
-
-      - name: AI SDK E2E Test
-        env:
-          CEREBRAS_API_KEY_1: ${{ secrets.CEREBRAS_API_KEY_1 }}
-          CEREBRAS_API_KEY_2: ${{ secrets.CEREBRAS_API_KEY_2 }}
-          CEREBRAS_API_KEY_3: ${{ secrets.CEREBRAS_API_KEY_3 }}
-        run: npx tsx scripts/tests/runner.ts --e2e
-        timeout-minutes: 3
 
   build-mac:
     needs: test
